--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -4,6 +4,6 @@
     "password": "Hasło",
     "sign-in": "Zaloguj się",
     "title": "Zaloguj się",
-    "try-as-guest": "Koontynuuj jako gość"
+    "try-as-guest": "Kontynuuj jako gość"
   }
 }
